--- a/scrolling/simple-div.html
+++ b/scrolling/simple-div.html
@@ -1,3 +1,5 @@
-<body>
+<title>
+A simple scrolling testing containing a div: height: 5000px; width: 5px; background-color: red;
+</title>
 <body>
 <div style="height: 5000px; width: 5px; background-color: red;"></div>
