--- a/scrolling/bugzilla-header-simple.html
+++ b/scrolling/bugzilla-header-simple.html
@@ -1,6 +1,7 @@
 <title>
 DLBI: Scrolling bugzilla header causes overinvalidation
 </title>
+<script src="autoscroll.js"></script>
 <!-- Make sure we can always scroll even on large monitors -->
 <div style="position: absolute; z-indez: -100; height: 5000px; width: 1px; background-color: white;"></div>
 
